<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE TableLayout>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">


    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_machine"
            android:textAppearance="?android:attr/textAppearanceLarge"/>


    <Button
            android:id="@+id/b_suspend"
            android:layout_width="163dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="suspend"
            android:text="@string/machine_suspend"/>


    <Button
            android:id="@+id/b_hibernate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="hibernate"
            android:text="@string/machine_hibernate"/>


    <Button
            android:id="@+id/b_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reboot"
            android:text="@string/machine_reboot"/>


    <Button
            android:id="@+id/b_shutdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shutdown"
            android:text="@string/machine_shutdown"/>
    <Button
            android:id="@+id/b_reload_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reload_config"
            android:text="@string/machine_reload_config"/>
    <Button
            android:id="@+id/b_restart_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="restart_server"
            android:text="@string/machine_restart_server"/>

</TableLayout>